[REFACTOR] Modify Method Authorization Config for User Roles